src/service/tests/prosody/snapshots/behavior__prosody__minimal_config.snap
---
source: src/service/tests/prosody/mod.rs
assertion_line: 65
expression: world.prosody_config().to_string(None)
---
-- Prose Pod Server
-- XMPP Server Configuration
-- /!\ This file has been automatically generated by Prose Pod API.
-- /!\ Do NOT edit this file manually or your changes will be overridden during the next reload.

-- Base server configuration
pidfile = "/var/run/prosody/prosody.pid"
admin_socket = "/var/run/prosody/prosody.sock"

authentication = "internal_hashed"

default_storage = "internal"

log = {
  info = "*console";
}

-- Network interfaces/ports
http_ports = { 5280 }

-- Modules
plugin_paths = { "/usr/local/lib/prosody/modules" }
modules_enabled = {
  "auto_activate_hosts";
  "blocklist";
  "bookmarks";
  "carbons";
  "csi";
  "csi_battery_saver";
  "dialback";
  "disco";
  "groups_internal";
  "groups_shell";
  "lastactivity";
  "limits";
  "mam";
  "pep";
  "ping";
  "private";
  "reload_modules";
  "roster";
  "saslauth";
  "server_contact_info";
  "smacks";
  "time";
  "tls";
  "uptime";
  "vcard4";
  "vcard_legacy";
  "version";
  "websocket";
}
modules_disabled = { "s2s" }

-- mod_reload_modules
reload_modules = { "tls" }

-- Disable in-band registrations (done through the Prose Pod Dashboard/API)
allow_registration = false

-- Mandate highest security levels
c2s_require_encryption = true

-- Enforce safety C2S/S2S limits
c2s_stanza_size_limit = 256 * 1024

limits = {
  c2s = {
    rate = "50kb/s";
    burst = "2s";
  };
}

-- Allow reverse-proxying to WebSocket service over insecure local HTTP
consider_websocket_secure = true

-- MAM settings
default_archive_policy = false

-- Enable vCard legacy compatibility layer
upgrade_legacy_vcards = true

-- mod_cloud_notify
push_notification_with_body = true
push_notification_with_sender = true

-- Server hosts and components
VirtualHost "test.org"
  -- Modules
  modules_enabled = {
    "admin_rest";
    "cloud_notify";
    "http_admin_api";
    "http_oauth2";
    "invites";
    "invites_groups";
    "invites_register";
    "invites_register_api";
    "prose_version";
    "register";
    "rest";
  }

  -- mod_reload_modules
  reload_modules = { "http_oauth2" }

  -- HTTP settings
  http_host = "prose-pod-server"

  -- mod_http_oauth2
  allowed_oauth2_grant_types = {
    "authorization_code";
    "refresh_token";
    "password";
  }
  oauth2_access_token_ttl = 10800
  oauth2_refresh_token_ttl = 0
  oauth2_registration_key = ENV_OAUTH2_REGISTRATION_KEY

Component "groups.test.org" "muc"
  name = "Chatrooms"

  -- Modules
  modules_enabled = {
    "muc_cloud_notify";
    "muc_mam";
    "muc_public_affiliations";
  }

  -- MAM settings
  max_archive_query_results = 100

  restrict_room_creation = "local"

  -- MUC settings
  muc_log_all_rooms = true
  muc_log_by_default = true
  muc_log_expires_after = "never"
